# ReviewScope

./: .dockerignore  .env.example  .gitignore  AGENTS.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: sample_reviews_small.csv
data/feedback/: two_stage__1000__s42__20260611T125917Z.jsonl
docs/: TODOS.md  application-spec.md  frontend-feature-gap-analysis.md  frontend-feature-implementation-plan.md  integration-guide.md  methodology.md  ml-integration-changelog.md  pipeline-guide.md  project-plan.md  quality-roadmap.md  results-overview.md
docs/architecture/: architecture-discussion.md  dataset-selection.md  tech-selection.md
docs/prompts/: fable5-ml-pipeline-prompt.md
notebooks/: 00_config.ipynb  01_data_exploration.ipynb  02_business_data_exploration.ipynb  02_preprocessing.ipynb  03_bertopic_baseline.ipynb  04_embeddings.ipynb  05_dimensionality_reduction.ipynb  06_clustering.ipynb  07_comparison.ipynb  08_llm_labeling.ipynb  10_pipeline_comparison.ipynb  11_hitl_roundtrip.ipynb
notebooks/utils/: __init__.py  cache.py  config.py  metrics.py  results_tracker.py
scripts/: dev-local.sh  make_notebooks.py  ollama-server.sh  setup_gpu.sh  sync_to_gpu.sh
src/backend/: Dockerfile  README.md  requirements.txt
src/frontend/: README.md  package-lock.json  package.json
src/ollama/: Dockerfile  (+1 more)
tests/: conftest.py  test_app_ingest.py  test_app_persistence.py  test_app_schema.py  test_app_service.py  test_artifacts.py  test_config_cache.py  test_feedback.py  test_gpu_pick.py  test_metrics.py  test_segment.py  test_sentiment.py  test_two_stage.py
(+111 files in other folders)
